# LibmosquittoTestTask

./: CMakeLists.txt  Readme.md  build.sh
Controller/: CMakeLists.txt  main.cpp
Controller/inc/: AlarmTemperatureValidator.h  Controller.h  TemperatureLogic.h
Controller/resource/: target_temperature.conf
Controller/src/: AlarmTemperatureValidator.cpp  Controller.cpp  TemperatureLogic.cpp
Device/: CMakeLists.txt  main.cpp
Device/inc/: Heater.h
Device/src/: Heater.cpp  Sensor.cpp  Sensor.h
inc/: ApplicationState.h  MosquittoClientWrapper.h  Utils.h
src/: ApplicationState.cpp  Utils.cpp
test/: CMakeLists.txt  LibmosquittoTest.cpp
test/resource/: config_parameter_out_of_length_range.conf  correct_value.conf  incorrect_real_part.conf  not_real_number.conf  wrong_config_parameter.conf
